# SimGraphicsNative

./: .clang-format  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  build.py  conanfile.py
.github/workflows/: ccpp.yml
.gitlab/issue_templates/: bug.md
assets/private/environments/: README.md
assets/private/shaders/: sine-wave.comp
assets/private/terrain/CoastalMountains/: CoastalMountains.tmd
assets/private/terrain/TreasureIsland/: Treasure Island.tmd
cmake/: shader.cmake  symlink.cmake
doc/: direct_render_design.md  scratch.pptx
src/: syntactic_sugar.cpp
src/sim/graphics/base/: config.h  debug_marker.h  device.cpp  device.h  glm_common.h  input.h  swapchain.cpp  swapchain.h  vkcommon.h  vulkan_base.cpp  vulkan_base.h
src/sim/graphics/base/pipeline/: descriptor_pool_maker.cpp  descriptor_pool_maker.h  descriptors.cpp  descriptors.h  pipeline.cpp  pipeline.h  render_pass.cpp  render_pass.h  sampler.h  shader.cpp  shader.h
src/sim/graphics/base/resource/: buffers.cpp  buffers.h  images.cpp  images.h
src/sim/graphics/base/resource/texture/: image_copy.cpp  image_layout.cpp  image_save.cpp  image_upload.cpp  sampler_maker.cpp  texture_2d.cpp  texture_cube.cpp  texture_maker.cpp
src/sim/graphics/compiledShaders/basic/: basic_frag.h  basic_vert.h  deferred_frag.h  deferred_ibl_frag.h  deferred_ibl_ms_frag.h  deferred_ms_frag.h  gbuffer_frag.h  quad_vert.h  translucent_frag.h
src/sim/graphics/compiledShaders/compute/: wave_fft_ping_comp.h  wave_fft_pong_comp.h
src/sim/graphics/compiledShaders/envmap/: filtercube_vert.h  genbrdflut_frag.h  genbrdflut_vert.h  irradiancecube_frag.h  prefilterenvmap_frag.h
src/sim/graphics/compiledShaders/intersection/: infinite_plane_rint.h  sphere_rint.h
src/sim/graphics/compiledShaders/raster/: debug_vert.h  deferred_frag.h  deferred_ibl_frag.h  deferred_ms_frag.h  deferred_ms_ibl_frag.h  deferred_vert.h  gbuffer_frag.h  gbuffer_vert.h  translucent_frag.h
src/sim/graphics/compiledShaders/raytracing/: ray_rgen.h  ray_rmiss.h  shadow_ray_rmiss.h
src/sim/graphics/compiledShaders/raytracing/primary_ray_chit/: primary_brdf_direct_rchit.h  primary_brdf_trace_rchit.h  primary_bsdf_trace_rchit.h
src/sim/graphics/compiledShaders/raytracing/procedural_ray_chit/: procedural_brdf_direct_rchit.h  procedural_brdf_trace_rchit.h  procedural_bsdf_trace_rchit.h
src/sim/graphics/compiledShaders/raytracing/raster/: raster_deferred_frag.h  raster_deferred_vert.h  raster_gbuffer_frag.h  raster_gbuffer_vert.h
src/sim/graphics/renderer/basic/: basic_model.cpp  basic_model.h  basic_model_buffer.cpp  basic_model_buffer.h  basic_model_manager.cpp  basic_model_manager.h  basic_renderer.cpp  basic_renderer.h  basic_scene_manager.cpp  basic_scene_manager.h  light.h  model_config.h  perspective_camera.h  ptr.h  render_pass.h
src/sim/graphics/renderer/basic/builder/: model_builder.cpp  model_builder.h  primitive_builder.cpp  primitive_builder.h
src/sim/graphics/renderer/basic/framegraph/: frame_graph.cpp  frame_graph.h  frame_graph_builder.cpp  frame_graph_builder.h  render_pass.cpp  render_pass.h  render_pass_builder.cpp  render_pass_builder.h
src/sim/graphics/renderer/basic/ibl/: envmap_generator.h  generate_brdflut.cpp  generate_envmap.cpp
src/sim/graphics/renderer/basic/loader/: gltf_loader.cpp  gltf_loader.h
src/sim/graphics/renderer/basic/model/: AABB.h  Vertex.h  aabb.cpp  aabb.h  animation.cpp  animation.h  basic_model.h  draw_queue.cpp  draw_queue.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  model_buffer.cpp  model_buffer.h  model_instance.cpp  model_instance.h  node.cpp  node.h  primitive.cpp  primitive.h  shadow.h  transform.cpp  transform.h  vertex.cpp  vertex.h
src/sim/graphics/renderer/default/: renderer.cpp  renderer.h
src/sim/graphics/renderpass/: gui_pass.cpp  gui_pass.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
src/sim/graphics/shaders/: basic.frag  basic.h  basic.vert  brdf.h  brdf_direct.h  common.h  fetch_materials.h  quad.vert  tonemap.h  translucent.frag
src/sim/graphics/shaders/basic/: basic.frag  basic.h  basic.vert  brdf.h  deferred.frag  deferred.h  deferred_ms.frag  deferred_sky.frag  gbuffer.frag  quad.vert  translucent.frag
src/sim/graphics/shaders/compute/: wave-fft-common.h  wave-fft-ping.comp  wave-fft-pong.comp
src/sim/graphics/shaders/deferred/: deferred.h  deferred_ibl.frag  deferred_ibl_ms.frag  deferred_sky_ms.frag  gbuffer.frag
src/sim/graphics/shaders/envmap/: filtercube.vert
src/sim/graphics/shaders/intersection/: infinite_plane.rint  sphere.rint
src/sim/graphics/shaders/ocean/: wave-fft-common.h  wave-fft-ping.comp  wave-fft-pong.comp
src/sim/graphics/shaders/raster/: debug.vert  deferred.frag  deferred.h  deferred.vert  deferred_ibl.frag  deferred_ms.frag  deferred_ms.h  deferred_ms_ibl.frag  gbuffer.frag  gbuffer.vert  ibl.h  shade.h  translucent.frag
src/sim/graphics/shaders/raytracing/: ray.rgen  ray.rmiss  ray_chit.h  shadow_ray.rmiss
src/sim/graphics/shaders/shadow/: deferred_shadow.frag  deferred_shadow_ms.frag  shadow.h
src/sim/graphics/shaders/sky/: atmosphere.h  deferred_sky.frag  deferred_sky_ms.frag  definitions.h  functions.h  indirect_irradiance.comp  scattering_density.comp
src/sim/graphics/shaders/terrain/: terrain.tesc  terrain.tese  terrain_tess.vert
src/sim/graphics/util/: fps_meter.cpp  fps_meter.h  materials.h
src/sim/graphics/util/ocean/: ocean_fft.cpp  ocean_fft.h
src/sim/util/: range.h  syntactic_sugar.h
test/: testDeferred.cpp  testRayTracing.cpp  testScene.h
test/basic/: GLTF2_0Test.cpp  PerformanceTest.cpp  TerrainTest.cpp  TestBasicRenderer.cpp  TestComputeMesh.cpp  TestDynamicPrimitive.cpp  TestNodeGraph.cpp  TestOcean.cpp  TestShadow.cpp  TestSkyRendering.cpp  TestTransform.cpp
test/bug/: PBRBlink.cpp  base_test.h
test/examples/: BasicMesh.cpp  LoadModels.cpp  LoadingTexture.cpp  MeshChange.cpp  MeshFromVertices.cpp  OrthographicCamera.cpp  TranslucentMaterial.cpp  getting_started.cpp
test/gltftest/: TestGLTF2_0.cpp
(+122 files in other folders)
